Add ascii banner

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 
 	<div class="hidden" id="terminal">
 
+		<div class=ascii-banner>
+			<pre>
+				<br>
+            ████           █████                <br>
+           ░░███          ░░███                 <br>
+   ██████   ░███   ██████  ░███████    ██████   <br>
+  ░░░░░███  ░███  ███░░███ ░███░░███  ░░░░░███  <br>
+   ███████  ░███ ░███ ░███ ░███ ░███   ███████  <br>
+  ███░░███  ░███ ░███ ░███ ░███ ░███  ███░░███  <br>
+ ░░████████ █████░░██████  ████ █████░░████████ <br>
+  ░░░░░░░░ ░░░░░  ░░░░░░  ░░░░ ░░░░░  ░░░░░░░░  <br>
+			</pre>
+		</div>
+
 		<h4 id="intro-pwd">
 			<div class="prompt">
 				<span class="prompt-username"> siliconcupcake </span>
