Add minor fixes for mobile keyboards

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<span class="prompt-username"> siliconcupcake </span>
 					<span class="prompt-arrow"> → </span>
 					<span class="prompt-directory"> /usr/bin </span>
-					<input type="text" name="option" class="command" spellcheck="false">
+					<input type="text" name="option" class="command" spellcheck="false" autocorrect="off" autocapitalize="none">
 				</div>
 			</h4>
 			<p class="hidden response"> </p>
