Add text highlighting to about message

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<div class='love'>
-			<p>Made with <span class='highlight'>❤</span> by Nandha Kishore</p>
+			<p>Made with <span class='text-highlight'>❤</span> by Nandha Kishore</p>
 		</div>
 
 		<h4 id='intro-pwd'>
@@ -52,9 +52,11 @@
 			<span class='remove-anim' id='cmd-cursor'></span>
 			<span class='hidden' id='about'>
 				Well, hello there (:<br>
-				I'm Nandha Kishore, a CSE undergrad at NIT Tiruchirappalli, one of the best learning institutes in the
+				I'm <span class='text-highlight'>Nandha Kishore</span>, a <span class='text-highlight'>CSE undergrad
+					from NIT Tiruchirappalli</span>, one of the best learning institutes in the
 				country.
-				I am currently a Software Engineer at Microsoft, and I love to code.
+				I am currently a <span class='text-highlight'>Software Engineer at Microsoft</span>, and I love to write
+				code that helps make my life easier.
 				To know more about me, take a look at my resume with the <span class='highlight'><a class='hyperlink'
 						href='resources/resume.pdf' target='_blank'>'resume'</a></span> command.
 				If you don't trust me, you can checkout my projects on github, by executing the <span
@@ -66,7 +68,7 @@
 				to reach out.
 				To learn the different shell commands use the <span class='highlight'>'help'</span> command.
 				Also, don't worry if you're too lazy to do all that. I've got you covered.
-				Just click on the pink links in this message to go to corresponding pages.
+				Just click on the blue links in this message to go to corresponding pages.
 				If you have nothing else to do on the site, you can <span class='highlight'>'exit'</span>.
 			</span>
 		</p>
