--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 				I'm <span class='text-highlight'>Nandha Kishore</span>, a <span class='text-highlight'>CSE undergrad
 					from NIT Tiruchirappalli</span>, one of the best learning institutes in the
 				country.
-				I am currently a <span class='text-highlight'>Software Engineer at Microsoft</span>, and I love to write
+				I am currently a <span class='text-highlight'>Software Engineer at Microsoft</span> with 3 years of experience, and I love to write
 				code that helps make my life easier.
+				Actively making an effort to make sure I leave something having made it better than when I found it.
 				To know more about me, take a look at my resume with the <span class='highlight'><a class='hyperlink'
 						href='resources/resume.pdf' target='_blank'>'resume'</a></span> command.
 				If you don't trust me, you can checkout my projects on github, by executing the <span
